--- a/index.html
+++ b/index.html
@@ -1,129 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | Bookmark landing page</title>
-</head>
-<body>
-
-  Features
-  Pricing
-  Contact
-  Login
-
-  A Simple Bookmark Manager
-
-  A clean and simple interface to organize your favourite websites. Open a new 
-  browser tab and see your sites load instantly. Try it for free.
-
-  Get it on Chrome
-  Get it on Firefox
-
-  Features
-
-  Our aim is to make it quick and easy for you to access your favourite websites. 
-  Your bookmarks sync between your devices so you can access them on the go.
-
-  Simple Bookmarking
-  Speedy Searching
-  Easy Sharing
-
-  Bookmark in one click
-
-  Organize your bookmarks however you like. Our simple drag-and-drop interface 
-  gives you complete control over how you manage your favourite sites.
-
-  More Info
-
-  Intelligent search
-
-  Our powerful search feature will help you find saved sites in no time at all. 
-  No need to trawl through all of your bookmarks.
-
-  More Info
-
-  Share your bookmarks
-
-  Easily share your bookmarks and collections with others. Create a shareable 
-  link that you can send at the click of a button.
-
-  More Info
-
-  Download the extension
-
-  We’ve got more browsers in the pipeline. Please do let us know if you’ve 
-  got a favourite you’d like us to prioritize.
-
-  Add to Chrome
-  Minimum version 62
-  Add & Install Extension
-
-  Add to Firefox
-  Minimum version 55
-  Add & Install Extension
-
-  Add to Opera
-  Minimum version 46
-  Add & Install Extension
-
-  Frequently Asked Questions
-  
-  Here are some of our FAQs. If you have any other questions you’d like 
-  answered please feel free to email us.
-
-  <!-- Question 1 -->
-  What is Bookmark?
-
-  <!-- Answer 1 -->
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
-
-  <!-- Question 2 -->
-  How can I request a new browser?
-
-  <!-- Answer 2 -->
-  Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
-
-  <!-- Question 3 -->
-  Is there a mobile app?
-
-  <!-- Answer 3 -->
-  Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
-  sollicitudin ex et ultricies bibendum.
-
-  <!-- Question 4 -->
-  What about other Chromium browsers?
-
-  <!-- Answer 4 -->
-  Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
-  vitae neque eget nisl gravida pellentesque non ut velit.
-
-  More Info
-
-  35,000+ already joined
-
-  Stay up-to-date with what we’re doing
-
-  Contact Us
-
-  Features
-  Pricing
-  Contact
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-      <a href="https://github.com/RaynaFaye">Serena Lombardo</a>.
-    </p>
-  </footer>
-  <script src="js/main.js"></script>
-</body>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Frontend Mentor | Bookmark landing page</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="images/logo-bookmark.svg" alt="Bookmark" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="">Features</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Login</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section>
+      <div>
+        <h1>A Simple Bookmark Manager</h1>
+        <p>
+          A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.
+        </p>
+        <button>Get it on Chrome</button>
+        <button>Get it on Firefox</button>
+      </div>
+      <div>
+        <img src="images/illustration-hero.svg" alt="" />
+      </div>
+    </section>
+    <section>
+      <h2>Features</h2>
+      <p>
+        Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access
+        them on the go.
+      </p>
+      <div>
+        <ul>
+          <li>
+            <button>Simple Bookmarking</button>
+            <button>Speedy Searching</button>
+            <button>Easy Sharing</button>
+          </li>
+        </ul>
+        <div>
+          <div>
+            <img src="images/illustration-features-tab-1.svg" alt="" />
+          </div>
+          <div>
+            <h3>Bookmark in one click</h3>
+            <p>
+              Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your
+              favourite sites.
+            </p>
+            <button>More Info</button>
+          </div>
+        </div>
+        <div>
+          <div>
+            <img src="images/illustration-features-tab-2.svg" alt="" />
+          </div>
+          <div>
+            <h3>Intelligent search</h3>
+            <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+            <button>More Info</button>
+          </div>
+        </div>
+        <div>
+          <div>
+            <img src="images/illustration-features-tab-3.svg" alt="" />
+          </div>
+          <div>
+            <h3>Share your bookmarks</h3>
+            <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+            <button>More Info</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>Download the extension</h2>
+      <p>We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+      <div>
+        <div>
+          <img src="images/logo-chrome.svg" alt="" />
+          <h3>Add to Chrome</h3>
+          <p>Minimum version 62</p>
+          <button>Add & Install Extension</button>
+        </div>
+        <div>
+          <img src="images/logo-firefox.svg" alt="" />
+          <h3>Add to Firefox</h3>
+          <p>Minimum version 55</p>
+          <button>Add & Install Extension</button>
+        </div>
+        <div>
+          <img src="images/logo-opera.svg" alt="" />
+          <h3>Add to Opera</h3>
+          <p>Minimum version 46</p>
+          <button>Add & Install Extension</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>Frequently Asked Questions</h2>
+      <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+      <details>
+        <summary>What is Bookmark?</summary>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt justo eget ultricies fringilla. Phasellus blandit ipsum quis quam
+          ornare mattis.
+        </p>
+      </details>
+      <details>
+        <summary>How can I request a new browser?</summary>
+        <p>
+          Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros
+          aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis
+          ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+        </p>
+      </details>
+      <details>
+        <summary>Is there a mobile app?</summary>
+        <p>
+          Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum urna vulputate eget. Cras in ligula quis
+          est pharetra mattis sit amet pharetra purus. Sed sollicitudin ex et ultricies bibendum.
+        </p>
+      </details>
+      <details>
+        <summary>What about other Chromium browsers?</summary>
+        <p>
+          Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam vitae neque eget nisl gravida pellentesque
+          non ut velit.
+        </p>
+      </details>
+      <button>More Info</button>
+    </section>
+    <section>
+      <p>35,000+ already joined</p>
+      <p>Stay up-to-date with what we’re doing</p>
+      <form action="">
+        <label for="email">Email Address:</label>
+        <input type="text" id="email" name="email" placeholder="Enter your emiail address" />
+        <input type="submit" value="Contact Us" />
+      </form>
+    </section>
+    <footer>
+      <div>
+        <img src="images/logo-bookmark.svg" alt="" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="">Features</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="" aria-label="Access our facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+              <path
+                fill="#FFF"
+                fill-rule="evenodd"
+                d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z"
+              />
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="" aria-label="Access our twitter">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20">
+              <path
+                fill="#FFF"
+                fill-rule="evenodd"
+                d="M24 2.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337.608a9.864 9.864 0 0 1-3.127 1.195A4.916 4.916 0 0 0 16.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 0 1 1.671 1.149a4.93 4.93 0 0 0 1.523 6.574 4.903 4.903 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.928 4.928 0 0 0 4.6 3.419A9.9 9.9 0 0 1 0 17.54a13.94 13.94 0 0 0 7.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0 0 24 2.557z"
+              />
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+        <a href="https://github.com/RaynaFaye">Serena Lombardo</a>.
+      </p>
+    </footer>
+    <script src="js/main.js"></script>
+  </body>
 </html>
