--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <title>Frontend Mentor | Bookmark landing page</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <img src="images/logo-bookmark.svg" alt="Bookmark" />
       </div>
       <nav>
-        <ul>
-          <li><a href="">Features</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">Login</a></li>
+        <ul class="header__menu">
+          <li class="header__menu__item"><a href="" class="header__menu__link">Features</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Pricing</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Contact</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link header__menu__link__button">Login</a></li>
         </ul>
       </nav>
     </header>
