--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-block">
+      <div class="image-block">
         <img src="images/logo-bookmark.svg" alt="Bookmark" />
       </div>
       <nav>
@@ -23,16 +23,16 @@
         </ul>
       </nav>
     </header>
-    <section>
+    <section class="intro">
       <div>
-        <h1>A Simple Bookmark Manager</h1>
-        <p>
+        <h1 class="intro__title">A Simple Bookmark Manager</h1>
+        <p class="intro__paragraph">
           A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.
         </p>
-        <button>Get it on Chrome</button>
-        <button>Get it on Firefox</button>
+        <button class="button">Get it on Chrome</button>
+        <button class="button intro__firefox-button">Get it on Firefox</button>
       </div>
-      <div>
+      <div class="image-block">
         <img src="images/illustration-hero.svg" alt="" />
       </div>
     </section>
@@ -154,7 +154,7 @@
     </section>
     <footer class="footer">
       <div class="footer__logo-menu-block">
-        <div class="logo-block">
+        <div class="image-block">
           <img src="images/logo-bookmark-footer.svg" alt="" />
         </div>
         <nav>
