Added background block to intro and some css for futur responsiveness

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <section class="intro">
-      <div>
+      <div class="intro__text-block">
         <h1 class="intro__title">A Simple Bookmark Manager</h1>
         <p class="intro__paragraph">
           A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.
@@ -32,9 +32,10 @@
         <button class="button">Get it on Chrome</button>
         <button class="button intro__firefox-button">Get it on Firefox</button>
       </div>
-      <div class="image-block">
-        <img src="images/illustration-hero.svg" alt="" />
+      <div class="image-block intro__image-block">
+        <img src="images/illustration-hero.svg" alt="" class="intro__image" />
       </div>
+      <div class="background-blue-block-right"></div>
     </section>
     <section>
       <h2>Features</h2>
