--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
       </details>
       <button>More Info</button>
     </section>
-    <section>
-      <p>35,000+ already joined</p>
-      <p>Stay up-to-date with what we’re doing</p>
+    <section class="contact">
+      <p class="contact__paragraph">35,000+ already joined</p>
+      <h2 class="contact__title">Stay up-to-date with what we’re doing</h2>
       <form action="">
-        <label for="email">Email Address:</label>
-        <input type="text" id="email" name="email" placeholder="Enter your emiail address" />
-        <input type="submit" value="Contact Us" />
+        <label for="email" class="screen-reader">Email Address:</label>
+        <input type="text" id="email" name="email" placeholder="Enter your email address" class="contact__input" />
+        <input type="submit" value="Contact Us" class="contact__submit-button" />
       </form>
     </section>
     <footer class="footer">
