Functionality for input in contact for showing error message if not an email

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <section class="contact">
       <p class="contact__paragraph">35,000+ already joined</p>
       <h2 class="contact__title">Stay up-to-date with what we’re doing</h2>
-      <form action="">
+      <form action="" class="contact__form">
         <label for="email" class="screen-reader">Email Address:</label>
         <div class="contact__input-block">
           <input type="text" id="email" name="email" placeholder="Enter your email address" class="contact__input" />
