--- a/index.html
+++ b/index.html
@@ -37,18 +37,24 @@
       </div>
       <div class="background-blue-block-right"></div>
     </section>
-    <section>
-      <h2>Features</h2>
-      <p>
-        Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access
-        them on the go.
-      </p>
+    <section class="features">
+      <div class="features__intro">
+        <h2 class="features__title">Features</h2>
+        <p class="features__paragraph">
+          Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access
+          them on the go.
+        </p>
+      </div>
       <div>
-        <ul>
+        <ul class="features__buttons">
           <li>
-            <button>Simple Bookmarking</button>
-            <button>Speedy Searching</button>
-            <button>Easy Sharing</button>
+            <button class="features__button features__current-button">Simple Bookmarking</button>
+          </li>
+          <li>
+            <button class="features__button">Speedy Searching</button>
+          </li>
+          <li>
+            <button class="features__button">Easy Sharing</button>
           </li>
         </ul>
         <div>
