--- a/index.html
+++ b/index.html
@@ -57,37 +57,43 @@
             <button class="features__button">Easy Sharing</button>
           </li>
         </ul>
-        <div>
-          <div>
-            <img src="images/illustration-features-tab-1.svg" alt="" />
+        <div class="features__facts">
+          <div class="features__fact features__current__fact">
+            <div class="image-block">
+              <img src="images/illustration-features-tab-1.svg" alt="" class="features__fact__image" />
+            </div>
+            <div>
+              <h3 class="features__fact__title">Bookmark in one click</h3>
+              <p class="features__fact__paragraph">
+                Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your
+                favourite sites.
+              </p>
+              <button class="button">More Info</button>
+            </div>
           </div>
-          <div>
-            <h3>Bookmark in one click</h3>
-            <p>
-              Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your
-              favourite sites.
-            </p>
-            <button>More Info</button>
+          <div class="features__fact">
+            <div class="image-block">
+              <img src="images/illustration-features-tab-2.svg" alt="" class="features__fact__image" />
+            </div>
+            <div>
+              <h3 class="features__fact__title">Intelligent search</h3>
+              <p class="features__fact__paragraph">
+                Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.
+              </p>
+              <button class="button">More Info</button>
+            </div>
           </div>
-        </div>
-        <div>
-          <div>
-            <img src="images/illustration-features-tab-2.svg" alt="" />
-          </div>
-          <div>
-            <h3>Intelligent search</h3>
-            <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
-            <button>More Info</button>
-          </div>
-        </div>
-        <div>
-          <div>
-            <img src="images/illustration-features-tab-3.svg" alt="" />
-          </div>
-          <div>
-            <h3>Share your bookmarks</h3>
-            <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
-            <button>More Info</button>
+          <div class="features__fact">
+            <div class="image-block">
+              <img src="images/illustration-features-tab-3.svg" alt="" class="features__fact__image" />
+            </div>
+            <div>
+              <h3 class="features__fact__title">Share your bookmarks</h3>
+              <p class="features__fact__paragraph">
+                Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.
+              </p>
+              <button class="button">More Info</button>
+            </div>
           </div>
         </div>
       </div>
