Added backgroound blue block and the active states for buttons in features section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           </div>
         </div>
       </div>
+      <div class="background-blue-block-left"></div>
     </section>
     <section>
       <h2>Download the extension</h2>
