Fixed layout issue when switching between the different facts

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ul>
         <div class="features__facts">
           <div class="features__fact features__current-fact" id="fact-one">
-            <div class="image-block">
+            <div class="image-block features__image-block">
               <img src="images/illustration-features-tab-1.svg" alt="" class="features__fact__image" />
             </div>
             <div>
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="features__fact" id="fact-two">
-            <div class="image-block">
+            <div class="image-block features__image-block">
               <img src="images/illustration-features-tab-2.svg" alt="" class="features__fact__image" />
             </div>
             <div>
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="features__fact" id="fact-three">
-            <div class="image-block">
+            <div class="image-block features__image-block">
               <img src="images/illustration-features-tab-3.svg" alt="" class="features__fact__image" />
             </div>
             <div>
