--- a/index.html
+++ b/index.html
@@ -99,9 +99,13 @@
       </div>
       <div class="background-blue-block-left"></div>
     </section>
-    <section>
-      <h2>Download the extension</h2>
-      <p>We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+    <section class="download">
+      <div class="download__intro">
+        <h2 class="download__title">Download the extension</h2>
+        <p class="download__paragraph">
+          We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.
+        </p>
+      </div>
       <div>
         <div>
           <img src="images/logo-chrome.svg" alt="" />
