Styled the download blocks for each browser and fixed padding for download section

--- a/index.html
+++ b/index.html
@@ -106,24 +106,27 @@
           We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.
         </p>
       </div>
-      <div>
-        <div>
+      <div class="download__boxes">
+        <div class="download__box download__box__chrome">
           <img src="images/logo-chrome.svg" alt="" />
-          <h3>Add to Chrome</h3>
-          <p>Minimum version 62</p>
-          <button>Add & Install Extension</button>
+          <h3 class="download__box__title">Add to Chrome</h3>
+          <p class="download__box__text">Minimum version 62</p>
+          <div class="download__dots"></div>
+          <button class="button">Add & Install Extension</button>
         </div>
-        <div>
+        <div class="download__box download__box__firefox">
           <img src="images/logo-firefox.svg" alt="" />
-          <h3>Add to Firefox</h3>
-          <p>Minimum version 55</p>
-          <button>Add & Install Extension</button>
+          <h3 class="download__box__title">Add to Firefox</h3>
+          <p class="download__box__text">Minimum version 55</p>
+          <div class="download__dots"></div>
+          <button class="button">Add & Install Extension</button>
         </div>
-        <div>
+        <div class="download__box download__box__opera">
           <img src="images/logo-opera.svg" alt="" />
-          <h3>Add to Opera</h3>
-          <p>Minimum version 46</p>
-          <button>Add & Install Extension</button>
+          <h3 class="download__box__title">Add to Opera</h3>
+          <p class="download__box__text">Minimum version 46</p>
+          <div class="download__dots"></div>
+          <button class="button">Add & Install Extension</button>
         </div>
       </div>
     </section>
