Styled the text and button in the faq section for desktop view

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         </div>
       </div>
     </section>
-    <section>
-      <h2>Frequently Asked Questions</h2>
-      <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+    <section class="faq">
+      <h2 class="faq__title">Frequently Asked Questions</h2>
+      <p class="faq__paragraph">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
       <details>
         <summary>What is Bookmark?</summary>
         <p>
@@ -162,7 +162,7 @@
           non ut velit.
         </p>
       </details>
-      <button>More Info</button>
+      <button class="button faq__button">More Info</button>
     </section>
     <section class="contact">
       <p class="contact__paragraph">35,000+ already joined</p>
