--- a/index.html
+++ b/index.html
@@ -133,31 +133,59 @@
     <section class="faq">
       <h2 class="faq__title">Frequently Asked Questions</h2>
       <p class="faq__paragraph">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
-      <details>
-        <summary>What is Bookmark?</summary>
-        <p>
+      <details class="faq__details">
+        <summary class="faq__summary">
+          What is Bookmark?
+          <span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
+          </span>
+        </summary>
+        <p class="faq__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt justo eget ultricies fringilla. Phasellus blandit ipsum quis quam
           ornare mattis.
         </p>
       </details>
-      <details>
-        <summary>How can I request a new browser?</summary>
-        <p>
+      <details class="faq__details">
+        <summary class="faq__summary">
+          How can I request a new browser?
+          <span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
+          </span>
+        </summary>
+        <p class="faq__text">
           Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros
           aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis
           ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
         </p>
       </details>
-      <details>
-        <summary>Is there a mobile app?</summary>
-        <p>
+      <details class="faq__details">
+        <summary class="faq__summary">
+          Is there a mobile app?
+          <span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
+          </span>
+        </summary>
+        <p class="faq__text">
           Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum urna vulputate eget. Cras in ligula quis
           est pharetra mattis sit amet pharetra purus. Sed sollicitudin ex et ultricies bibendum.
         </p>
       </details>
-      <details>
-        <summary>What about other Chromium browsers?</summary>
-        <p>
+      <details class="faq__details">
+        <summary class="faq__summary">
+          What about other Chromium browsers?
+          <span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
+          </span>
+        </summary>
+        <p class="faq__text">
           Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam vitae neque eget nisl gravida pellentesque
           non ut velit.
         </p>
