Added functionality to open and close menu and fixed css for hover on social links in header menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
         <ul class="header__mobile__social-links">
           <li class="header__mobile__social-links__item">
-            <a href="" aria-label="Access our facebook" class="header__mobile__social-link">
+            <a href="" aria-label="Access our facebook" class="header__mobile__social-link header__menu__link">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                 <path
                   fill="#FFF"
@@ -51,7 +51,7 @@
             </a>
           </li>
           <li class="header__mobile__social-links__item">
-            <a href="" aria-label="Access our twitter" class="header__mobile__social-link">
+            <a href="" aria-label="Access our twitter" class="header__mobile__social-link header__menu__link">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20">
                 <path
                   fill="#FFF"
