--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
         </div>
         <nav>
           <ul class="menu footer__menu">
-            <li class="menu__item"><a href="" class="menu__link footer__menu__link">Features</a></li>
-            <li class="menu__item"><a href="" class="menu__link footer__menu__link">Pricing</a></li>
-            <li class="menu__item"><a href="" class="menu__link footer__menu__link">Contact</a></li>
+            <li class="menu__item footer__menu__item"><a href="" class="menu__link footer__menu__link">Features</a></li>
+            <li class="menu__item footer__menu__item"><a href="" class="menu__link footer__menu__link">Pricing</a></li>
+            <li class="menu__item footer__menu__item"><a href="" class="menu__link footer__menu__link">Contact</a></li>
           </ul>
         </nav>
       </div>
