Styled the features section for mobile view

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your
                 favourite sites.
               </p>
-              <button class="button">More Info</button>
+              <button class="button features__more-button">More Info</button>
             </div>
           </div>
           <div class="features__fact" id="fact-two">
@@ -121,7 +121,7 @@
               <p class="features__fact__paragraph">
                 Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.
               </p>
-              <button class="button">More Info</button>
+              <button class="button features__more-button">More Info</button>
             </div>
           </div>
           <div class="features__fact" id="fact-three">
@@ -133,7 +133,7 @@
               <p class="features__fact__paragraph">
                 Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.
               </p>
-              <button class="button">More Info</button>
+              <button class="button features__more-button">More Info</button>
             </div>
           </div>
         </div>
